--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wizard_name_generator",
-  "version": "1.0.2",
-  "description": "simple name generator",
+  "version": "1.0.5",
+  "description": "simple fantasy name generator",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
